# reflex-scoreboard

./: .gitignore  Makefile  README.md  Taskfile.yml  changelog-config.js  changelog.config.js  package-lock.json  pyproject.toml  ruff.toml  rxconfig.py
abc_scoring_api/: __init__.py  player_score.py
abc_scoring_api/player/: player_info.py  player_score.py
reflex_scoreboard/: reflex_scoreboard.py
reflex_scoreboard/data_structure/: payload.py  player.py  scoreboard.py
reflex_scoreboard/manager/: score_manager.py
reflex_scoreboard/operation/: nomx.py  operation_base.py
src/abc_scoring_api/: __init__.py
tests/: test_player_info.py  test_player_score.py
tests/data_structure/: test_payload.py  test_player.py  test_scoreboard.py
tests/manager/: test_score_manager.py
tests/operation/: test_nomx.py
tests/player/: test_player_info.py  test_player_score.py
