[project]
name = "abc-scoring-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m-uesaka", email = "aleo724@gmail.com" }
]
dependencies = [
    "reflex>=0.5.1",
    "lowdb>=0.0.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=24.4.2",
    "isort>=5.13.2",
    "pylint>=3.2.2",
    "mypy>=1.10.0",
    "pytest>=8.2.1",
    "pytest-coverage>=0.0",
    "ruff>=0.4.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/abc_scoring_api"]
