[project]
name = "reflex-scoreboard"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Masaaki Uesaka", email = "aleo724@gmail.com" }
]
dependencies = [
    "reflex>=0.6.6.post2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.8.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.15.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["reflex_scoreboard/"]

[tool.mypy]
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["reflex"]